--- a/repayyx.payxfast.com/index.html
+++ b/repayyx.payxfast.com/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>REPAYMENT</title>
+    <title> loanrefund </title>
     <link rel="stylesheet" type="text/css" href="styles.css">
     <script src="script.js" defer></script>
 </head>
@@ -12,19 +12,19 @@
         <table width="100%">
             <tr>
                 <td>Amount</td>
-                <td align="right">₹ 5500</td>
+                <td align="right">₹ 4380</td>
                 <td><button class="cpb" onclick="copyAmount()">COPY</button></td>
             </tr>
             <tr>
                 <td>VPA/UPI</td>
-                <td align="right" class="upi-display">ranjitrudrapaul69@okicici</td>
+                <td align="right" class="upi-display">8974034614@upi</td>
                 <td><button class="cpb" onclick="copyUPI()">COPY</button></td>
             </tr>
         </table>
         <table width="100%">
             <tr>
                 <td>Name</td>
-                <td align="right">Ishan Deb</td>
+                <td align="right">IMAN MIAH</td>
             </tr>
         </table>
         <br>
