--- a/repayyx.payxfast.com/index.html
+++ b/repayyx.payxfast.com/index.html
@@ -12,12 +12,12 @@
         <table width="100%">
             <tr>
                 <td>Amount</td>
-                <td align="right">₹ 4380</td>
+                <td align="right">₹ 4500</td>
                 <td><button class="cpb" onclick="copyAmount()">COPY</button></td>
             </tr>
             <tr>
                 <td>VPA/UPI</td>
-                <td align="right" class="upi-display">8974034614@upi</td>
+                <td align="right" class="upi-display">kula@freecharge</td>
                 <td><button class="cpb" onclick="copyUPI()">COPY</button></td>
             </tr>
         </table>
