--- a/repayyx.payxfast.com/index.html
+++ b/repayyx.payxfast.com/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title> loanrefund </title>
+    <title>REPAYMENT</title>
     <link rel="stylesheet" type="text/css" href="styles.css">
     <script src="script.js" defer></script>
 </head>
@@ -17,14 +17,14 @@
             </tr>
             <tr>
                 <td>VPA/UPI</td>
-                <td align="right" class="upi-display">kula@freecharge</td>
+                <td align="right" class="upi-display">mdas11528-1@oksbi</td>
                 <td><button class="cpb" onclick="copyUPI()">COPY</button></td>
             </tr>
         </table>
         <table width="100%">
             <tr>
                 <td>Name</td>
-                <td align="right">IMAN MIAH</td>
+                <td align="right">MANTU DAS</td>
             </tr>
         </table>
         <br>
