--- a/repayyx.payxfast.com/index.html
+++ b/repayyx.payxfast.com/index.html
@@ -12,19 +12,19 @@
         <table width="100%">
             <tr>
                 <td>Amount</td>
-                <td align="right">₹ 4500</td>
+                <td align="right">₹ 3800</td>
                 <td><button class="cpb" onclick="copyAmount()">COPY</button></td>
             </tr>
             <tr>
                 <td>VPA/UPI</td>
-                <td align="right" class="upi-display">mdas11528-1@oksbi</td>
+                <td align="right" class="upi-display">unicashofficial02@okhdfcbank</td>
                 <td><button class="cpb" onclick="copyUPI()">COPY</button></td>
             </tr>
         </table>
         <table width="100%">
             <tr>
                 <td>Name</td>
-                <td align="right">MANTU DAS</td>
+                <td align="right">SHIPAN SHIL</td>
             </tr>
         </table>
         <br>
