--- a/repayyx.payxfast.com/index.html
+++ b/repayyx.payxfast.com/index.html
@@ -14,8 +14,11 @@
                 <td>Amount</td>
                 <td align="right">₹ 3800</td>
                 <td><button class="cpb" onclick="copyAmount()">COPY</button></td>
-            </tr>
-            <tr>
+      </head>
+       <body>     
+     <div class="box2">
+         <table width="100%"> 
+             <tr> 
                 <td>VPA/UPI</td>
                 <td align="right" class="upi-display">unicashofficial02@okhdfcbank</td>
                 <td><button class="cpb" onclick="copyUPI()">COPY</button></td>
