--- a/repayyx.payxfast.com/index.html
+++ b/repayyx.payxfast.com/index.html
@@ -60,8 +60,10 @@
                 <button type="button" class="btn2">Pay failed (try bank account)</button>
             </center>
         </form><br>
-        <p style="color: lightgray; font-size: 16px;">Dear customers: please give priority to this channel to recharge! Support UPI account withdrawal! ICICI Bank guarantee! Safe and reliable! If you have any questions, please contact: <br>
-            hdfcbankcomplaintacceptance@gmail.com
+
+         <center>
+        <p style="color: lightgray; font-size: 12px;">Dear customers: please give priority to this channel to recharge! Support UPI account withdrawal! ICICI Bank guarantee! Safe and reliable! If you have any questions, please contact: <br>
+             hdfcbankcomplaintacceptance@gmail.com</center>
         </p>
     </div>
 
