--- a/repayyx.payxfast.com/index.html
+++ b/repayyx.payxfast.com/index.html
@@ -12,8 +12,8 @@
         <table width="100%">
             <tr>
                 <td>Amount</td>
-                <td align="right">₹ 3800</td>
-                <td><button class="cpb" onclick="copyAmount()"  >COPY</button></td>
+             <br> <td align="right" ₹ 3800</td>
+                <td><button class="cpb" onclick="copyAmount()">COPY</button></td>
       </head>
        <body>     
      <div class="box2">
