--- a/repayyx.payxfast.com/index.html
+++ b/repayyx.payxfast.com/index.html
@@ -27,7 +27,7 @@
                 <td align="right">SHIPAN SHIL</td>
             </tr>
         </table>
-        <p class="a1">↓ Select payment method and pay ↓</p><br>
+        <p class="a1">↓ Select payment method and pay ↓</p><tr>
         <table>
             <tr>
                 <td><input type="radio" class="rdaacls"></td>
