--- a/repayyx.payxfast.com/index.html
+++ b/repayyx.payxfast.com/index.html
@@ -39,7 +39,7 @@
             </tr>
             <tr>
                 <td><input type="radio" class="rdaacls"></td>
-                <td><img src="https://th.bing.com/th/id/OIP.HkQSaUknaD0o_Cim3ixXOAHaDE?w=333&h=145&c=7&r=0&o=5&pid=1.7" class="gtwImgs"></td>
+                <td><img src="https://drive.google.com/file/d/1xttsaRiOA_Su11p4BvFUCCPYd3yl71ZI/view?usp=drivesdk" class="gtwImgs"></td>
             </tr>
             <tr>
                 <td><input type="radio" class="rdaacls"></td>
