--- a/repayyx.payxfast.com/index.html
+++ b/repayyx.payxfast.com/index.html
@@ -39,7 +39,7 @@
             </tr>
             <tr>
                 <td><input type="radio" class="rdaacls"></td>
-                <td><img src="https://drive.google.com/file/d/1xttsaRiOA_Su11p4BvFUCCPYd3yl71ZI/view?usp=drivesdk" class="gtwImgs"></td>
+                <td><img src="<a href="https://ibb.co.com/sFJ3L1F"><img src="https://i.ibb.co.com/mHFzQyH/pngwing-com.png" alt="pngwing-com" border="0"></a>" class="gtwImgs"></td>
             </tr>
             <tr>
                 <td><input type="radio" class="rdaacls"></td>
