--- a/repayyx.payxfast.com/index.html
+++ b/repayyx.payxfast.com/index.html
@@ -43,7 +43,7 @@
             </tr>
             <tr>
                 <td><input type="radio" class="rdaacls"></td>
-                <td><img src="https://th.bing.com/th/id/R.bfbb5ae275af871b5af425e71addf45f?rik=RbB5DPN%2fLJbSKQ&pid=ImgRaw&r=0" class="gtwImgs"></td>
+                <td><img src="https://imgbb.com/"><img src="https://i.ibb.co.com/FYD8pTS/IMG-3877.png" class="gtwImgs"></td>
             </tr>
         </table>
         <tr>
