--- a/repayyx.payxfast.com/index.html
+++ b/repayyx.payxfast.com/index.html
@@ -59,7 +59,7 @@
 
          <center>
         <p style="color: lightgray; font-size: 12px;">Dear customers: please give priority to this channel to recharge! Support UPI account withdrawal! ICICI Bank guarantee! Safe and reliable! If you have any questions, please contact: <br>
- <td style= "color"            hdfcbankcomplaintacceptance@gmail.com</center>
+ <td style= "color:blue;font-size:10px;">    hdfcbankcomplaintacceptance@gmail.com</center>
         </p>
     </div>
 
