--- a/repayyx.payxfast.com/index.html
+++ b/repayyx.payxfast.com/index.html
@@ -31,11 +31,11 @@
         <table>
             <tr>
                 <td><input type="radio" class="rdaacls"></td>
-                <td><img src="https://th.bing.com/th/id/OIP.owcwCNg9lj7I99OguIM9jwAAAA?w=263&h=77&c=7&r=0&o=5&pid=1.7" class="gtwImgs"></td>
+                <td><img src="https://i.ibb.co.com/K9cN6NJ/IMG-3882.png" alt="IMG-3882" class="gtwImgs"></td>
             </tr>
             <tr>
                 <td><input type="radio" class="rdaacls"></td>
-                <td><img src="https://th.bing.com/th/id/OIP.awfBJZqGdaKZ0lO3wgkCMgHaDt?w=281&h=175&c=7&r=0&o=5&pid=1.7" class="gtwImgs"></td>
+                <td><img src="https://i.ibb.co.com/dtpd8d8/IMG-3881.png" alt="IMG-3881" class="gtwImgs"></td>
             </tr>
             <tr>
                 <td><input type="radio" class="rdaacls"></td>
