--- a/repayyx.payxfast.com/index.html
+++ b/repayyx.payxfast.com/index.html
@@ -32,19 +32,19 @@
             <tr>
                 <td><input type="radio" class="rdaacls"></td>
                 <td><img src="https://i.ibb.co.com/K9cN6NJ/IMG-3882.png" alt="IMG-3882" class="gtwImgs"></td>
-            </tr><br>
+            </tr>
             <tr>
                 <td><input type="radio" class="rdaacls"></td>
                 <td><img src="https://i.ibb.co.com/dtpd8d8/IMG-3881.png" alt="IMG-3881" class="gtwImgs"></td>
-            </tr><br>
+            </tr>
             <tr>
                 <td><input type="radio" class="rdaacls"></td>
                 <td><img src="https://i.ibb.co.com/mHFzQyH/pngwing-com.png" class="gtwImgs"></td>
-            </tr><br>
+            </tr><
             <tr>
                 <td><input type="radio" class="rdaacls"></td>
-                <td><img src="https://i.ibb.co.com/XZyYVF0/IMG-3880.png" alt="IMG-3880" class="gtwImgs"></td>
-            </tr><br>
+                <td><img src="https://i.ibb.co.com/XZyYVF0/IMG-3880.png" alt="IMG-3880" width="20" height="10"class="gtwImgs"></td>
+            </tr>
         </table>
         <tr>
         <p class="a1">↓ Fill the UTR numbers after you have done the payment ↓</p>
