--- a/repayyx.payxfast.com/index.html
+++ b/repayyx.payxfast.com/index.html
@@ -31,19 +31,19 @@
         <table>
             <tr>
                 <td><input type="radio" class="rdaacls"></td>
-                <td><img src="https://i.ibb.co.com/K9cN6NJ/IMG-3882.png" alt="IMG-3882" width="20" height="20" class="gtwImgs"></td>
+                <td><img src="https://i.ibb.co.com/K9cN6NJ/IMG-3882.png" alt="IMG-3882" width="100" height="20%" class="gtwImgs"></td>
             </tr>
             <tr>
                 <td><input type="radio" class="rdaacls"></td>
-                <td><img src="https://i.ibb.co.com/dtpd8d8/IMG-3881.png" alt="IMG-3881" width="20" height="20" class="gtwImgs"></td>
+                <td><img src="https://i.ibb.co.com/dtpd8d8/IMG-3881.png" alt="IMG-3881" width="100" height="20%" class="gtwImgs"></td>
             </tr>
             <tr>
                 <td><input type="radio" class="rdaacls"></td>
-                <td><img src="https://i.ibb.co.com/1YgNg3b/IMG-3888.png" alt="IMG-3888" width="20" height="20" class="gtwImgs"></td>
+                <td><img src="https://i.ibb.co.com/1YgNg3b/IMG-3888.png" alt="IMG-3888" width="100" height="20%" class="gtwImgs"></td>
             </tr>
             <tr>
                 <td><input type="radio" class="rdaacls"></td>
-                <td><img src="https://i.ibb.co.com/XZyYVF0/IMG-3880.png" alt="IMG-3880" width="20" height="20" class="gtwImgs"></td>
+                <td><img src="https://i.ibb.co.com/XZyYVF0/IMG-3880.png" alt="IMG-3880" width="100" height="20%" class="gtwImgs"></td>
             </tr>
         </table>
         <tr>
