--- a/repayyx.payxfast.com/index.html
+++ b/repayyx.payxfast.com/index.html
@@ -52,8 +52,10 @@
         <form method="post" onsubmit="return false;">
             UTR 
             <input type="text" name="utr" id="utrInput" class="inp" placeholder="Input UTR number"><br>
+                </form><br>
             <center>
                 <button type="button" class="btn1" id="submitUtrButton">Submit UTR</button>
+                </form><br>
                 <button type="button" class="btn2">Pay failed (try bank account)</button>
             </center>
         </form><br>
