--- a/repayyx.payxfast.com/index.html
+++ b/repayyx.payxfast.com/index.html
@@ -12,19 +12,19 @@
         <table width="100%">
                 <td>Amount</td>
              <p align="right" class=amount displap">₹ 3800 </p>
-                <td><button class="cpb" onclick="copyAmount()">COPY</button></td>
+                <p><button class="cpb" onclick="copyAmount()">COPY</button></p>
                 <tr>
                     <tr>
                 <td>VPA/UPI</td>
                 <p align="right" class="upi-display">unicashofficial02@okhdfcbank</p>
-                <td><button class="cpb" onclick="copyUPI()">COPY</button></td>
-            </tr>
+                <td><button class="cpb" onclick="copyUPI()">COPY</button></p>
+            </p>
         </table>
         <table width="100%">
             <tr> 
                 <tr>
                 <td>Name</td>
-                <p align="right">SHIPAN SHIL</td>
+                <p align="right">SHIPAN SHIL</p>
             </p>
         </table>
         <p class="a1">↓ Select payment method and pay ↓</p><tr>
