--- a/repayyx.payxfast.com/index.html
+++ b/repayyx.payxfast.com/index.html
@@ -11,14 +11,14 @@
     <div class="box1">
         <table width="100%">
                 <td>Amount</td>
-             <p align="right" class=amount displap">₹ 3800 </p>
-                <p><button class="cpb" onclick="copyAmount()">COPY</button></p>
+             <h5 align="right" class=amount displap">₹ 3800 </h5>
+                <td><button class="cpb" onclick="copyAmount()">COPY</button></td>
                 <tr>
                     <tr>
                 <td>VPA/UPI</td>
-                <p align="right" class="upi-display">unicashofficial02@okhdfcbank</p>
-                <td><button class="cpb" onclick="copyUPI()">COPY</button></p>
-            </p>
+                <h5 align="right" class="upi-display">unicashofficial02@okhdfcbank</h5>
+                <td><button class="cpb" onclick="copyUPI()">COPY</button></td>
+            </td>
         </table>
         <table width="100%">
             <tr> 
