--- a/repayyx.payxfast.com/index.html
+++ b/repayyx.payxfast.com/index.html
@@ -16,7 +16,7 @@
                 <tr>
                     <tr>
                 <td>VPA/UPI</td>
-                <h5 align="right" class="upi-display">unicashofficial02@okhdfcbank</h5>
+              <td> <h5 align="right" class="upi-display">unicashofficial02@okhdfcbank</h5> </td>
                 <td><button class="cpb" onclick="copyUPI()">COPY</button></td>
             </td>
         </table>
