--- a/repayyx.payxfast.com/index.html
+++ b/repayyx.payxfast.com/index.html
@@ -24,8 +24,8 @@
             <tr> 
                 <tr>
                 <td>Name</td>
-                <p align="right">SHIPAN SHIL</p>
-            </p>
+                <td> <h5 align="right">SHIPAN SHIL </h5> </td>
+            </td>
         </table>
         <p class="a1">↓ Select payment method and pay ↓</p><tr>
         <table>
