--- a/repayyx.payxfast.com/index.html
+++ b/repayyx.payxfast.com/index.html
@@ -15,7 +15,7 @@
                 <td><button class="cpb" onclick="copyAmount()">COPY</button></td>
                 <tr>
                     <tr>
-                <td>VPA/UPI</td>
+                <h3>VPA/UPI</h3>
               <td> <h5 align="right" class="upi-display">unicashofficial02@okhdfcbank</h5> </td>
                 <td><button class="cpb" onclick="copyUPI()">COPY</button></td>
             </td>
@@ -23,7 +23,7 @@
         <table width="100%">
             <tr> 
                 <tr>
-                <td>Name</td>
+                <h3>Name</h3>
                 <td> <h5 align="right">SHIPAN SHIL </h5> </td>
             </td>
         </table>
@@ -31,17 +31,17 @@
         <table>
             <tr>
                 <td><input type="radio" class="rdaacls"></td>
-                <td><img src="https://i.ibb.co.com/K9cN6NJ/IMG-3882.png" alt="IMG-3882" width="42px" height="20px" class="gtwImgs"></td>
+                <td><img src="https://i.ibb.co.com/K9cN6NJ/IMG-3882.png" alt="IMG-3882" width="63px" height="30px" class="gtwImgs"></td>
             </tr>
-            <br>
+            <tr>
                 <td><input type="radio" class="rdaacls"></td>
-                <td><img src="https://i.ibb.co.com/dtpd8d8/IMG-3881.png" alt="IMG-3881" width="66px" height="20px" class="gtwImgs"></td>
+                <td><img src="https://i.ibb.co.com/dtpd8d8/IMG-3881.png" alt="IMG-3881" width="99px" height="30px" class="gtwImgs"></td>
             </tr>
-            <br>
+            <tr>
                 <td><input type="radio" class="rdaacls"></td>
-                <td><img src="https://i.ibb.co.com/1YgNg3b/IMG-3888.png" alt="IMG-3888" width="64px" height="20px" class="gtwImgs"></td>
+                <td><img src="https://i.ibb.co.com/1YgNg3b/IMG-3888.png" alt="IMG-3888" width="96px" height="30px" class="gtwImgs"></td>
             </tr>
-            <br>
+            <tr>
                 <td><input type="radio" class="rdaacls"></td>
                 <td><img src="https://i.ibb.co.com/XZyYVF0/IMG-3880.png" alt="IMG-3880" width="56px" height="20px" class="gtwImgs"></td>
             </tr>
