--- a/repayyx.payxfast.com/index.html
+++ b/repayyx.payxfast.com/index.html
@@ -15,7 +15,7 @@
                 <td><button class="cpb" onclick="copyAmount()">COPY</button></td>
                 <tr>
                     <tr>
-                <h3>VPA/UPI</h3>
+                <td>VPA/UPI</td>
               <td> <h5 align="right" class="upi-display">unicashofficial02@okhdfcbank</h5> </td>
                 <td><button class="cpb" onclick="copyUPI()">COPY</button></td>
             </td>
@@ -23,7 +23,7 @@
         <table width="100%">
             <tr> 
                 <tr>
-                <h3>Name</h3>
+                <td>Name</td>
                 <td> <h5 align="right">SHIPAN SHIL </h5> </td>
             </td>
         </table>
