--- a/repayyx.payxfast.com/index.html
+++ b/repayyx.payxfast.com/index.html
@@ -28,26 +28,20 @@
             </td>
         </table>
         <h3 class="a1">↓ Select payment method and pay ↓</h3><tr>
-        <table>
-            <tr>
-               <hr> <br> <input type="radio" class="rdaacls"></td> 
-            <td><img src="https://i.ibb.co.com/K9cN6NJ/IMG-3882.png" alt="IMG-3882" width="63px" height="30px" style="vertical-align:middle" class="gtwImgs">  <br> </br> <hr> </td>
-            </tr>
-            <tr>
-            <hr> <br> <td><input type="radio" class="rdaacls"></td>
-                <td><img src="https://i.ibb.co.com/dtpd8d8/IMG-3881.png" alt="IMG-3881" width="99px" height="30px" style="vertical-align:middle" class="gtwImgs"> <br> </br> <hr> </td>
-            </tr>
-            <tr>
-            <hr> <br> <td><input type="radio" class="rdaacls"></td>
-                <td><img src="https://i.ibb.co.com/1YgNg3b/IMG-3888.png" alt="IMG-3888" width="96px" height="30px" style="vertical-align:middle" class="gtwImgs"> <br> </br> <hr> </td>
-            </tr>
-            <tr>
-                <td><input type="radio" class="rdaacls"></td>
-            <hr> <br> <td><img src="https://i.ibb.co.com/XZyYVF0/IMG-3880.png" alt="IMG-3880" width="84px" height="30px" style="vertical-align:middle" class="gtwImgs"> <br> </br> <hr> </td>
-            </tr>
-            <tr>
-        </table>
-        <tr>
+        <table> 
+        <hr><br> </tr> 
+             <tr><input type="radio" class="rdaacls"></tr> 
+                <img src="https://i.ibb.co.com/K9cN6NJ/IMG-3882.png" alt="IMG-3882" width="63px" height="30px" style="vertical-align:middle" class="gtwImgs"> <br></br> <hr> </tr> 
+                <br>
+            <tr><input type="radio" class="rdaacls"></tr>
+                <img src="https://i.ibb.co.com/dtpd8d8/IMG-3881.png" alt="IMG-3881" width="99px" height="30px" style="vertical-align:middle" class="gtwImgs"> <br> </br> <hr> </tr>
+               <br>
+            <tr><input type="radio" class="rdaacls"></tr>
+                <img src="https://i.ibb.co.com/1YgNg3b/IMG-3888.png" alt="IMG-3888" width="96px" height="30px" style="vertical-align:middle" class="gtwImgs"> <br> </br> <hr> </tr>
+                 <br>
+            <tr> <input type="radio" class="rdaacls"></tr>
+            <img src="https://i.ibb.co.com/XZyYVF0/IMG-3880.png" alt="IMG-3880" width="84px" height="30px" style="vertical-align:middle" class="gtwImgs"> <br> </br> <hr> </tr>
+     
         <h3 class="a1">↓ Fill the UTR numbers after you done payment ↓</h3>
         <form method="post" onsubmit="return false;">
             UTR 
